--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
