--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,6 +27,7 @@
     "react-daum-postcode": "^3.2.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
   },
